--- a/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
+++ b/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Dtos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+  </ItemGroup>
+
 </Project>
