Implementa testes unitários, corrige regra de validação para Bispo e Rei

--- a/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
+++ b/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="DomainValidationCore" Version="1.1.1" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
   </ItemGroup>
 
