--- a/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
+++ b/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DomainValidationCore" Version="1.1.1" />
+    <PackageReference Include="DomainValidationAsync" Version="1.0.1" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
   </ItemGroup>
