Implementa testes unitários para alguns services

--- a/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
+++ b/src/Moreno.ChessGame.Domain/Moreno.ChessGame.Domain.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
+    <NuGetAudit>true</NuGetAudit>
+    <NuGetAuditLevel>high</NuGetAuditLevel>
   </PropertyGroup>
 
   <ItemGroup>
